# snaildb

./: '  .gitignore  LICENSE  README.md
docs/: NOTES.md
src/: CMakeLists.txt  main.cc  test.cc
src/libs/core/: db.cc  db.h
src/libs/lsm_tree/: cbf.cc  cbf.h  lsm.cc  lsm.h  record.h  segment.cc  segment.h  sst.cc  sst.h
src/libs/util/: hash_util.h
src/test/: behaviour_test.cc  behaviour_tests.cc  segment_test.cc  test.cc  test_util.cc  test_util.h
